# pytest-offline

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
pytest_offline/: utils.py
tests/: test_plugin.py  test_utils.py
