[tool.poetry]
name = "pytest-offline"
version = "0.1.0"
description = ""
authors = ["Vlad Dmitrievich <2tunnels@proton.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pytest_offline"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
pytest = "^7.2.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
